--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# 日本語フォントアセット
+/Assets/font/KaiseiOpti-Regular SDF
